--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+body {
+  background-color: #111;
+}
+
 .header {
   background-color: rgba(119, 119, 119, 0.863);
 }
@@ -35,14 +39,49 @@
 
 .nav__link {
   font-size: 25px;
-  color: #181818;
+  color: black;
   text-decoration: none;
   -webkit-transition: color .15s;
   transition: color .15s;
 }
 
 .nav__link:hover {
-  color: #3d3d3d;
+  color: whitesmoke;
   -webkit-transition: color .15s;
   transition: color .15s;
+}
+
+.content {
+  position: relative;
+  margin-top: 40px;
+}
+
+.content__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content__foto {
+  border: #111 2px solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 900px;
+  height: 500px;
+  background-color: #111;
+}
+
+.content__title {
+  text-align: center;
 }
