--- a/style/style.scss
+++ b/style/style.scss
@@ -4,9 +4,13 @@
 	box-sizing: border-box;
 }
 
+body{
+	background-color: #111;
+}
+
 .header {
 	background-color: rgba(119, 119, 119, 0.863);
-	
+
 }
 .container {
 	width: 1400px;
@@ -37,13 +41,41 @@
 
 .nav__link {
 	font-size: 25px;
-	color: rgb(24, 24, 24);
+	color: rgb(0, 0, 0);
 	text-decoration: none;
 	transition: color .15s;
 }
 
 
 .nav__link:hover{
-	color: rgb(61, 61, 61);
+	color: rgb(245, 245, 245);
 	transition: color .15s;
+}
+
+
+
+.content {
+	position: relative;
+	margin-top: 40px;
+
+}
+.content__inner {
+	
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.content__foto {
+	border: #111 2px solid;
+	display: flex;
+	justify-content: center;
+	width: 900px;
+	height: 500px;
+	background-color: #111;
+}
+.content__title {
+	text-align: center;
+}
+.content__text {
 }
