--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 body {
   background: url("/image/2.jpg") no-repeat;
   position: relative;
+  background-attachment: fixed;
 }
 
 .header {
@@ -95,6 +96,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: 0 auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -104,10 +106,64 @@ body {
 }
 
 .content__title {
+  font-size: 30px;
+  padding: 15px 0;
   text-align: center;
 }
 
 .content__text {
-  padding: 5px;
+  padding: 0 30px 1000px;
   line-height: 1.5;
+}
+
+.footer {
+  background-color: #242424;
+  height: 200px;
+  color: #fff;
+}
+
+.footer__inner {
+  padding: 15px 30px 0;
+}
+
+.footer__copy {
+  padding-top: 15px;
+}
+
+.footer__text1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: .1s;
+  transition: .1s;
+}
+
+.footer__link {
+  text-decoration: none;
+  color: #fff;
+  -webkit-transition: .1s;
+  transition: .1s;
+  font-size: 21px;
+}
+
+.footer__link:hover {
+  font-size: 28px;
+  color: #a5a5a5;
+}
+
+.footer__text2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
 }
