--- a/style/style.scss
+++ b/style/style.scss
@@ -7,6 +7,7 @@
 body{
 	background: url("/image/2.jpg") no-repeat;
 	position: relative;
+	background-attachment: fixed;
 }
 
 .header {
@@ -63,10 +64,8 @@ body{
 
 
 .content {
-
+	
 	height: 100%;
-
-
 
 }
 .content__inner {
@@ -85,17 +84,57 @@ body{
 }
 
 .content__foto {
+	
 	border: #111 2px solid;
 	display: flex;
+	margin: 0 auto;
 	justify-content: center;
 	width: 900px;
 	height: 500px;
 	background-color: #111;
 }
 .content__title {
+	font-size: 30px;
+	padding: 15px 0;
 	text-align: center;
 }
 .content__text {
-	padding: 5px;
+	padding: 0 30px 1000px;
 	line-height: 1.5;
+}
+
+.footer {
+	background-color: rgb(36, 36, 36);
+	height: 200px;
+	color: #fff;
+}
+.container {
+}
+.footer__inner {
+	padding: 15px 30px 0;
+}
+
+.footer__copy {
+	padding-top: 15px;
+}
+
+.footer__text1 {
+	display: flex;
+	flex-direction: column;
+	transition: .1s;
+}
+.footer__link {
+	text-decoration: none;
+	color: #fff;
+	transition: .1s;
+	font-size: 21px;
+}
+.footer__link:hover{
+	font-size: 28px;
+	color: rgb(165, 165, 165);
+}
+.footer__text2 {
+	display: flex;
+	flex-direction: column;
+	justify-content: right;
 }
